[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/yellow_wheel.png" type="Texture" id=1]
[ext_resource path="res://YellowWheel.gd" type="Script" id=2]
[ext_resource path="res://sprites/yellow_wheel_highlight.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0

[node name="YellowWheel" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="RotationContainer" type="Node2D" parent="."]

[node name="wheel_highlight" type="Sprite" parent="RotationContainer"]
visible = false
texture = ExtResource( 3 )

[node name="yellow_wheel" type="Sprite" parent="RotationContainer"]
texture = ExtResource( 1 )

[node name="HighlightBlinkTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
